Correctly align Select with HDS components

--- a/src/common/select/select.module.scss
+++ b/src/common/select/select.module.scss
@@ -42,8 +42,9 @@
 }
 
 .labelText {
-  display: inline-block;
-  margin-bottom: units(0.25);
+  display: block;
+  margin-bottom: units(0.2);
   font-size: font-size(14);
   font-weight: bold;
+  line-height: var(--hds-text-sm-line-height);
 }
